# YouTube_Downloader

./: .gitignore  README.md  index.html  package.json
plans/: architecture.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: DownloadProgress.tsx  QualitySelector.tsx  RecentDownloads.tsx  SaveLocationPicker.tsx  SubtitleOptions.tsx  URLInput.tsx
src/services/: recent-downloads.ts  ytdlp.ts
src/stores/: app-store.ts
src/types/: index.ts
src/utils/: formatting.ts  validation.ts
